# hw_mod_7

./: Dockerfile  README.md  courses_and_lessons.json  docker-compose.yaml  pyproject.toml  users.json  users_and_payments.json
config/: settings.py  urls.py
lms/: models.py  serializers.py  task.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_method.py  0004_subs.py  0005_alter_subs_is_subs.py  0006_remove_subs_is_subs.py  0007_payment_link_payment_session_id.py  0008_alter_payment_method_alter_payment_paid_date.py
