[tool.poetry]
name = "hw-mod-7"
version = "0.1.0"
description = ""
authors = ["Dmitry Zadorozhnyy <zadorozhnyy_d_m@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
